themes/siz/assets/css/webkid.css
body {
  background: #f5f5f5;
}

body * {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
}

em {
  display: block;
  padding-top: 30px;
  padding-bottom: 30px;
  line-height: 35px;
}

p {
  display: block;
  margin-top: 20px;
  margin-bottom: 20px;
  line-height: 35px;
}

strong {
  display: block;
  padding-top: 25px;
  padding-bottom: 25px;
  line-height: 35px;
  font-family: "Open Sans";
}

iframe {
  border: none;
  display: block;
  width: 100%;
  margin: 0 auto;
}

.ad-taboola-1-3 {
  height: 300px;
  width: 660px;
  margin: auto;
  overflow: hidden;
}

.ad-taboola-2-3 {
  height: 600px;
  width: 660px;
  margin: auto;
  overflow: hidden;
  margin-top: 70px;
}

.ad {
  overflow: hidden;
}

iframe.instagram-media.instagram-media-rendered {
  border: none;
  display: block;
  width: 100%;
  margin: 0 auto;
}

#instagram-embed-0.instagram-media.instagram-media-rendered {
  border: 0px;
  margin: auto;
  max-width: 658px;
  width: calc(100% - 2px);
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 1px 0px, rgba(0, 0, 0, 0.14902) 0px 1px 10px 0px;
  display: block;
  padding: 0px;
  background: rgb(255, 255, 255);
}

.ad.ad-banner-top {
  height: 100px;
  width: 94%;
  margin: auto;
  margin-bottom: 30px;
}

.ad.ad-banner-post {
  height: 130px;
  position: relative;
  width: 101%;
  padding-left: 30px;
  margin: auto;
  background-color: #F5F5F5;
  margin-bottom: 30px;
}

.ad.ad-banner-bottom {
  height: 100px;
  width: 67%;
  margin-left: 10%;
  margin-top: 20px;
  margin-bottom: 0;
}

.ad.ad-banner-sidebar {
  width: 310px;
  height: 260px;
  margin: auto;
  margin-bottom: 30px;
  border-bottom: 1px solid #eee;
  overflow: hidden;
}

.ad.ad-banner-bottom-sidebar {
  width: 310px;
  height: 260px;
  margin: auto;
  margin-bottom: 30px;
  overflow: hidden;
}

.thumb-container {
  position: relative;
  overflow: hidden;
  height: 205px;
  width: 320px;
  margin-bottom: 10px;
}

.thumb {
  position: absolute;
  left: 0;
  top: 0;
  height: 200px;
  width: 340px;
}

.thumb-span {
  display: block;
}

.header {
  text-align: center;
  padding-bottom: 10px;
  background: linear-gradient(-45deg, transparent 0%, transparent 42%, rgba(0, 0, 0, 0.2) 50%, transparent 50%, transparent 100%), radial-gradient(circle, rgba(255, 0, 40, 0.9), rgba(184, 0, 65, 0.6)), linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("/assets/img/home-bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center 37%;
  box-shadow: 0 1px 2px rgba(50, 50, 50, 0.2);
}

.header .app-download {
  position: absolute;
  right: 10px;
  top: 10px
}

.app-download {
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  display: inline-block
} 

.header .logo {
  display: inline-block;
  margin-top: 15px;
  height: 30px;
}

.fb_iframe_widget,
.fb_iframe_widget span,
.fb_iframe_widget span iframe[style] {
  min-width: 100% !important;
  width: 100% !important;
  margin-bottom: 40px;
}

.fb_iframe_widget span {
  margin-top: 40px;  
}

.fb-video {
  margin-bottom: 0;
}

div.fluid-width-video-wrapper {
  margin-bottom: 35px;
}


img {
  max-width: 100%;
}

a {
  outline: none;
  margin: 0;
  padding: 0;
  font-size: 100%;
  vertical-align: baseline;
  background: transparent;
  text-decoration: none;
}

.container {
  max-width: 740px;
  margin: auto;
}

.taglist-wrapper {
  width: 100%;
  background: #FFF;
  height: 45px;
  line-height: 40px;
  padding: 0;
  border-bottom: 1px solid #E8E8E8;
}

ul.taglist {
  padding: 0 1em;
  margin: 0;
  list-style: none;
  max-width: 1250px;
  margin: 0 auto;
}

ul.taglist li {
  margin: 0;
  padding: .2em .5em;
  text-transform: uppercase;
  font-family: "Open Sans", sans-serif;
  font-weight: 500;
  color: #111;
  font-size: 14px;
  float: left;
  cursor: pointer;
  transition: none;
}
ul.taglist li:hover {
  background: #ff0002;
  font-style: italic;
  cursor: pointer;
}
ul.taglist li:hover a {
  color: #fff;
}

ul.taglist li a {
  text-decoration: none;
  transition: none;
  cursor: pointer;
}

#content {
  width: 100%;
  max-width: 1250px;
  margin: 0 auto;
  margin-top: 25px;
  padding: 1em;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
}

.sidebox.latest-articles a {
  text-decoration: none;
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  display: block;
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
  border-bottom: 1px solid #eee;
  line-height: 1.3;
}

.sidebox .loader {
  width: 100%;
  text-align: center;
  font-size: 30px;
  padding: 1em 0;
  display: none;
}

.sidebox .loading .loader {
  display: block;
  height: 3em;
  width: 3em;
  animation: rotation 1s infinite linear;
  border: 1px solid rgba(255, 0, 2, 0.2);
  border-top-color: rgba(255, 0, 2, 0.7);
  border-radius: 50%;
  margin: 20px auto;
}

@keyframes rotation {
  to {
    transform: rotate(360deg);
  }
}

.sidebox.most a.last {
  padding-bottom: 0;
  border: none;
}

.sidebox.most a .date {
  font-size: .8em;
  color: #9EABB3;
  font-weight: normal;
  margin-bottom: .6em;
}

.sidebox .sidebox-title {
  background: #505050;
  padding: .5em 1em;
  color: #fff;
  font-family: "Arial";
  font-size: 22px;
  font-weight: bold;
}

.sidebox.about .most {
  font-size: .9em;
  line-height: 1.7;
}

.sidebox .most {
  padding: 1em;
}
#articles, #article {
  width: 67%;
  margin-right: 3%;
  float: left;
}

#articles .post {
  width: 100%;
  margin: 0;
  padding: 0;
  padding-bottom: 1em;
  max-width: none;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
  margin-bottom: 2em;
}

#articles .post .post-image {
  width: 100%;
  height: 300px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#articles .post header,
#articles .post .post-excerpt,
#articles .post footer {
  padding: 0 1.8rem;
}

#articles .post header {
  padding-top: 1em;
}

#articles .post h2 {
  color: #4A4A4A;
}

#articles .post:hover h2 {
  color: #111;
}

#articles .post a, 
#articles .post a:visited{
  text-decoration: none;
}

#sidebar {
  width: 30%;
  float: left;
}

#sidebar button {
  display: block;
  width: 100%;
  margin: 1em 0;
  padding: .5em 0;
}

#sidebar .articles-related .box {
  margin-bottom: 2em;
}

.box {
  background: #fff;
  padding: 1em;
  box-shadow: 0 1px 2px rgba(50,50,50,0.08);
}

.sidebox.about .most {
  font-size: .9em;
  line-height: 1.7;
}

.sidebox {
  margin-bottom: 2em;
  padding: 0;
}

.sidebox p {
  margin: 0;
  margin-bottom: 1em;
}

.sidebox.latest-articles a {
  text-decoration: none;
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  display: block;
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
  border-bottom: 1px solid #eee;
  line-height: 1.3;
}

.sidebox .loader {
  width: 100%;
  text-align: center;
  font-size: 30px;
  padding: 1em 0;
  display: none;
}

.sidebox .loading .loader {
  display: block;
  height: 3em;
  width: 3em;
  animation: rotation 1s infinite linear;
  border: 1px solid rgba(255, 0, 2, 0.2);
  border-top-color: rgba(255, 0, 2, 0.7);
  border-radius: 50%;
  margin: 20px auto;
}


@keyframes rotation {
  to {
    transform: rotate(360deg);
  }
}

.sidebox.latest-articles a.last {
  padding-bottom: 0;
  border: none;
}

.sidebox.latest-articles a .date {
  font-size: .8em;
  color: #9EABB3;
  font-weight: normal;
  margin-bottom: .6em;
}

.sidebox .sidebox-title {
  background: #505050;
  padding: .5em 1em;
  color: #fff;
  font-family: "Arial";
  font-size: 22px;
  font-weight: bold;
}

.sidebox.about .sidebox-content {
  font-size: .9em;
  line-height: 1.7;
}

.sidebox .sidebox-content {
  padding: 1em;
  overflow: hidden;
}

.sidebox.social {
  width: 100%;
  text-align: center;
}
.sidebox.social ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.social-item {
    width: 25%;
    float:left;
    color: #fff;
    text-decoration: none;
    padding: .3em 0;
    -webkit-transition: opacity .3s;
    -o-transition: opacity .3s;
    transition: opacity .3s;
}

.social-item:hover {
  color: #fff;
}

.social-item.fb {
  background: #39599F;
}

.social-item.rss {
  background: #f26522;
}
.social-item:hover {
  opacity: .8;
}

.social-item.tw {
  background: #55acee;
}

.social-item.home {
  background: #ff0002;
}

.social-item.github {
  background: #333333;
}

.sidebox.social ul li {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

i.fa.fa-facebook {
  margin-top: 1px;
}

.box.is-link:hover {
  box-shadow: 0 2px 4px rgba(50,50,50,0.15);
  cursor: pointer;
}

section.post-content {
  height: auto;
  margin: auto;
}

section.post-content img {
  padding-top: 10px;
  padding-bottom: 10px;
}

section.post-content p {
  display: block;
  width: 660px;
  margin: auto;
  font-size: 18px;
  padding-top: 35px;
  font-family: "Open Sans";
  text-align: justify;
  line-height: 30px;
}

#article {
  padding: 0;
  padding-top: 3em;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
  margin-bottom: 2.5em;
}

#article.has-image {
  padding-top: 0;
}

#article .image-wrapper {
  width: 100%;
  position: relative;
  display: inline-block;
}

#article .image-wrapper .gradient {
  width: 100%;
  height: 100%;
  background: #fff;
  opacity: .5;
}

#article img.post-image {
  width: 100%;
  height: auto;
  margin-bottom: 50px;
  display: block;
}

.button {
  background: #989898;
  border-radius: 0;
  color: #fff;
  font-size: 1em;
  font-weight: 900;
  padding: .4em 2em;
  text-transform: uppercase;
  text-align: center;
  -webkit-transition: box-shadow .15s;
  transition: box-shadow .15s;
  text-decoration: none;
  display: block;
  border: none;
  border-bottom: 5px solid #656565;
  -webkit-transition: background .5s;
  transition: background .5s;
  font-family: "Open Sans", sans-serif;
}

a.article-link,
a.article-link:hover,
a.article-link:visited {
  text-decoration: none;
}

/*Tablet*/
@media (max-width: 1150px) {
  #sidebar, #articles, #article {
    width: 100%;
  }

  div#sidebar {
    margin-top: 0px;
  }

  .ad.ad-banner-top {
    margin-left: 0;
    margin: 0 auto;
    margin-top: 20px;
    width: 740px;
  }

  .ad.ad-banner-bottom {
    margin-left: 0;
    margin: 0 auto;
    margin-top: 20px;
    width: 740px;
  }

  .ad.ad-banner-post {
    margin-left: -5px;
    margin-bottom: 30px;
    width: 740px;
  }
}

@media (max-width: 750px) {
  #taglist .mobile-hidden {
    display: none;
  }

  div#sidebar {
    margin-top: 0px;
  }

  section.post-content p {
    margin-left: 0;
    width: auto;
  }

  .post-content .img-inline {
    display: block;
  }

  .ad.ad-banner-top {
   display: none;
  }

  .ad.ad-banner-post {
   display: none;
  }

  .ad.ad-banner-bottom {
    display: none;
  }

  .ad.ad-banner-bottom-sidebar {
    display: none;
  }

  div.ad.ad-below-video {
    margin-left: -10px;
  }

  .ad-taboola-1-3 {
    width: 98%;
    margin: auto;
    height: 470px;
  }

  .ad-taboola-2-3 {
    width: 98%;
    height: 1250px;
  }
}

